--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,10 @@ github:
 twitter:
   username: adonijah_kimut # change to your Twitter username
 
+linkedin:
+username: adonijah-kiplimo
+
+
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
