--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Africa/Nairobi
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: KiMuTsEC # the main title
+title: ./KiMuTsEC # the main title
 
 tagline: Cybersecurity, DFIR, Software Security. # it will display as the subtitle
 
