--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Import the theme
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -34,8 +34,7 @@ twitter:
   username: adonijah_kimut # change to your Twitter username
 
 linkedin:
-username: adonijah-kiplimo
-
+  username: adonijah-kiplimo
 
 social:
   # Change to your full name.
