--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Africa/Nairobi
 
 title: ./0xKiMuTsEC # the main title
 
-tagline: Cybersecurity, DFIR, Software Security. # it will display as the subtitle
+tagline: Security Analyst | Network & Cloud Security | Digital Forensics | Security Instructor | CTF🏴| Software Security # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Cybersecurity, DFIR, Software Security.
