--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Africa/Nairobi
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: ./0xKiMuTsEC # the main title
+title: KiMuTsEC # the main title
 
 tagline: Security Analyst | Network & Cloud Security | Digital Forensics | Security Instructor | CTF🏴| Software Security # it will display as the subtitle
 
