--- a/_config.yml
+++ b/_config.yml
@@ -182,7 +182,7 @@ defaults:
       type: posts
     values:
       layout: post
-      active: true # Set the default value of `active` in front matter
+      active: false  # Set to false by default for all posts
       comments: true # Enable comments in posts.
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
